src/test/deca/context/valid/list_decl_field_multiple_definition_different_class.deca
// Test of the rule (2.4): we check that if we try to
// declare several times a field with the same name but in different
// different classes, it works.

class A {
  int x;
}

class B {
  int x;
}

class C extends A {
  int x;
}

