src/test/deca/context/invalid/expr_this_out_of_class.deca
// Test rule (3.43) : if we try to use `this` statement in main program, it
// fails.

{
  this.x = 3;
}

//# a

